Formato y mock data data

--- a/src/app/componentes/listar-producto/listar-producto.component.html
+++ b/src/app/componentes/listar-producto/listar-producto.component.html
@@ -1,34 +1,75 @@
 <div class="container mt-5">
     <div class="row">
-        <div class="col-lg-8 offset-lg-2">
+        <div class="col-lg-10 offset-lg-1">
             <div class="card">
-                <div class="card-body text-center">
-                    <span class="titulo">LISTADO DE PRODUCTOS</span>
-                        <button class="btn btn-success float-end" routerLink="/crear-producto">NUEVO</button>
+                <div class="card-body">
+                    <span class="titulo">Listado de libros</span>
+                        <button class="btn btn-outline-warning float-end" routerLink="/crear-producto">Add new book</button>
+                        <br><br>
                         <table class="table table-striped mt-3">
                             <thead>
                                 <tr>
-                                    <th scope="col">Producto</th>
-                                    <th scope="col">Categoria</th>
-                                    <th scope="col">Ubicación</th>
-                                    <th scope="col">Precio</th>
-                                    <th scope="col"></th>
+                                    <th class="title-table"></th>
+                                    <th scope="col" class="title-table">Libro</th>
+                                    <th scope="col"class="title-table">Autor</th>
+                                    <th scope="col" class="title-table">Categoria</th>
+                                    <th scope="col" class="title-table">Ubicación</th>
+                                    <th scope="col" class="title-table">Precio</th>
+                                    <th scope="col" class="title-table"></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Teclado</td>
-                                    <td>Accesorios</td>
-                                    <td>Caja</td>
-                                    <td>40</td>
-                                    <td>
+                                    <td class="content-table"></td>
+                                    <td class="content-table">La palabra del mudo</td>
+                                    <td class="content-table">Julio Ramón Ribeyro</td>
+                                    <td class="content-table">Cuento</td>
+                                    <td class="content-table">AR34-2</td>
+                                    <td class="content-table">s/.55</td>
+                                    <td class="content-table">
+                                        <i [routerLink]="['/editar-producto']" class="fas fa-edit text-primary"></i>
+                                        <i class="fas fa-trash text-danger"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="content-table"></td>
+                                    <td class="content-table">La palabra del mudo</td>
+                                    <td class="content-table">Julio Ramón Ribeyro</td>
+                                    <td class="content-table">Cuento</td>
+                                    <td class="content-table">AR34-2</td>
+                                    <td class="content-table">s/.55</td>
+                                    <td class="content-table">
+                                        <i [routerLink]="['/editar-producto']" class="fas fa-edit text-primary"></i>
+                                        <i class="fas fa-trash text-danger"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="content-table"></td>
+                                    <td class="content-table">La palabra del mudo</td>
+                                    <td class="content-table">Julio Ramón Ribeyro</td>
+                                    <td class="content-table">Cuento</td>
+                                    <td class="content-table">AR34-2</td>
+                                    <td class="content-table">s/.55</td>
+                                    <td class="content-table">
+                                        <i [routerLink]="['/editar-producto']" class="fas fa-edit text-primary"></i>
+                                        <i class="fas fa-trash text-danger"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="content-table"></td>
+                                    <td class="content-table">La palabra del mudo</td>
+                                    <td class="content-table">Julio Ramón Ribeyro</td>
+                                    <td class="content-table">Cuento</td>
+                                    <td class="content-table">AR34-2</td>
+                                    <td class="content-table">s/.55</td>
+                                    <td class="content-table">
                                         <i [routerLink]="['/editar-producto']" class="fas fa-edit text-primary"></i>
                                         <i class="fas fa-trash text-danger"></i>
                                     </td>
                                 </tr>
                             </tbody>
                         </table>
-                        <h5 style="text-align: start; margin-top: 10px">No hay productos para mostrar</h5>
+                        <!-- <h5 style="text-align: start; margin-top: 10px">No hay productos para mostrar</h5> -->
                 </div>
             </div>
         </div>
