--- a/src/app/componentes/crear-producto/crear-producto.component.html
+++ b/src/app/componentes/crear-producto/crear-producto.component.html
@@ -6,10 +6,17 @@
                     <span class="titulo">{{ titulo | uppercase}}</span>
                     <form class="mt-3" [formGroup]="productoForm" (ngSubmit)="agregarProducto()">
                         <div class="mb-3">
-                            <input type="text" formControlName="producto" class="form-control form-control-lg" placeholder="Producto">
+                            <input type="text" formControlName="titulo" class="form-control form-control-lg" placeholder="Título">
                             <div class="text-danger" 
-                                *ngIf="productoForm.get('producto')?.hasError('required') && productoForm.get('producto')?.touched">
-                            <span>El nombre del producto <strong>es obligatorio</strong></span>
+                                *ngIf="productoForm.get('titulo')?.hasError('required') && productoForm.get('titulo')?.touched">
+                            <span>El título del libro <strong>es obligatorio</strong></span>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" formControlName="autor" class="form-control form-control-lg" placeholder="Autor">
+                            <div class="text-danger" 
+                                *ngIf="productoForm.get('autor')?.hasError('required') && productoForm.get('autor')?.touched">
+                            <span>El título del libro <strong>es obligatorio</strong></span>
                             </div>
                         </div>
                         <div class="mb-3">
@@ -20,7 +27,7 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <input type="text" formControlName="ubicacion" class="form-control form-control-lg" placeholder="Ubicacion">
+                            <input type="text" formControlName="ubicacion" class="form-control form-control-lg" placeholder="Ubicación">
                             <div class="text-danger" 
                                 *ngIf="productoForm.get('ubicacion')?.hasError('required') && productoForm.get('ubicacion')?.touched">
                                 <span>La ubicación <strong>es obligatoria</strong></span>
@@ -34,8 +41,8 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <button routerLink="/" class="btn btn-secondary btn-lg float-start">VOLVER</button>
-                            <button type="submit" [disabled]="productoForm.invalid" class="btn btn-success btn-lg float-end">ACEPTAR</button>
+                            <button routerLink="/" class="btn btn-secondary btn-lg float-start">Back</button>
+                            <button type="submit" [disabled]="productoForm.invalid" class="btn btn-outline-warning btn-lg float-end">Accept</button>
                         </div>
                     </form>
                 </div>
